--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
     <title>Beyond Words</title>
 
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
-    <link rel="icon" size="80x80" href="/favicon.ico">
+    <link rel="icon" size="80x80" href="/favicon.png">
 
 
     <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/8417947c-f880-4f43-a07d-57ecfee13523.css"/>
