add more content to homepage, update some visuals

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <head>
-    <title>Beyond Words</title>
+    <title>Beyond Words | Home</title>
 
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
-    <link rel="icon" size="80x80" href="/favicon.png">
+    <link rel="icon" size="80x80" href="/favicon.ico">
 
     <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/236f2bbf-1887-48f5-a90a-dc9cde395d5a.css"/>
     <link type="text/css" rel="stylesheet" href="/fonts/materialdesignicons.css"/>
