--- a/client/main.html
+++ b/client/main.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/236f2bbf-1887-48f5-a90a-dc9cde395d5a.css"/>
     <link type="text/css" rel="stylesheet" href="/fonts/materialdesignicons.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.3.15/slick.css" />
-
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/mirador/build/mirador/css/mirador-combined.css" />
 		<script type="text/javascript" src="/mirador/build/mirador/mirador.js" />
 
